--- a/src/shopping_list/templates/recipe_all.html
+++ b/src/shopping_list/templates/recipe_all.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>RECIPE</h1>
-    {% for id, title in recipes.items() %}
+    {% for title, id in recipes|dictsort(case_sensitive=False) %}
         <p><a href={{ url_for('view_recipe', recipe_id=id) }}>{{ title }}</a></p>
     {% endfor %}
 {% endblock %}
