--- a/src/shopping_list/templates/base.html
+++ b/src/shopping_list/templates/base.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+    <style>
+    	h1 { font-family: courier; }
+        a { text-decoration: none; }
+    </style>
     {% block extra_head %}{% endblock %}
 </head>
 <body>
