--- a/src/shopping_list/templates/recipe_all.html
+++ b/src/shopping_list/templates/recipe_all.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
+{% block extra_head %}
+{% endblock %}
+
 {% block content %}
-    <h1>RECIPE</h1>
+    <h1>RECIPES</h1>
     {% for title, id in recipes|dictsort(case_sensitive=False) %}
-        <p><a href={{ url_for('view_recipe', recipe_id=id) }}>{{ title }}</a></p>
+        <p><a href={{ url_for('view_recipe', recipe_id=id) }} style="font-family: courier">{{ title }}</a></p>
     {% endfor %}
 {% endblock %}
