--- a/src/shopping_list/templates/list.html
+++ b/src/shopping_list/templates/list.html
@@ -2,7 +2,8 @@
 
 {% block extra_head %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="{{url_for('static', filename='js/new_field.js') }}"></script>
+<script src="{{ url_for('static', filename='js/new_field.js') }}"></script>
+<script src="{{ url_for('static', filename='js/ingredients.js') }}"></script>
 
 <style>
     .container { width: 100%; }
@@ -41,13 +42,12 @@
             </div>
             <div class="outer_column" id="ingredients_section">
                 {% if shopping_list is not none %}
+                    {% set counter = 0 %}
                     {% for key, value in shopping_list.items() %}
-                        <div class="inner_column">
-                            <input type="text" value="{{ key }}" size=15 /><!--
-                            -->&nbsp<input type="text" value="{{ value[0] }}" size=5 style="text-align: right" /><!--
-                            -->&nbsp<input type="text" value="{{ value[1] }}" size=5 />
-                            <br />
-                        </div>
+                        <input type="text" value="{{ key }}" size=15 id="ingredients-{{ counter }}-ing_name" /><!--
+                        -->&nbsp<input type="text" value="{{ value[0] }}" size=5 style="text-align: right" id="ingredients-{{ counter }}-amount" /><!--
+                        -->&nbsp<input type="text" value="{{ value[1] }}" size=5 id="ingredients-{{ counter }}-unit" />
+                        <br />
                     {% endfor %}
                 {% endif %}
             </div>
