Adjust scaling of homepage so that it fits the screen

--- a/src/shopping_list/templates/index.html
+++ b/src/shopping_list/templates/index.html
@@ -5,6 +5,10 @@
     table#table_dates th, td {
         padding: 10px;
     }
+    .table_cell {
+    	font-size: 12px;
+    	width: 100%;
+    }
 </style>
 {% endblock %}
 
