--- a/src/shopping_list/templates/recipe_all.html
+++ b/src/shopping_list/templates/recipe_all.html
@@ -11,6 +11,6 @@
         <input type="submit" name="submit" value="SEARCH" />
     </form>
     {% for title, id in recipes|dictsort(case_sensitive=False) %}
-        <p><a href={{ url_for('view_recipe', recipe_id=id) }} style="font-family: courier">{{ title }}</a></p>
+        <p><a href={{ url_for('recipe.view_recipe', recipe_id=id) }} style="font-family: courier">{{ title }}</a></p>
     {% endfor %}
 {% endblock %}
