Fix input tags (closing tag is forbidden) Add tests for list view Reorganize tests into unit and integration

--- a/src/shopping_list/templates/index.html
+++ b/src/shopping_list/templates/index.html
@@ -43,6 +43,6 @@
                 {% endif %}
             {% endfor %}
         </table>
-        <p><input type="submit" value="SAVE" /></p>
+        <p><input type="submit" value="SAVE"></p>
     </form>
 {% endblock %}
