--- a/src/shopping_list/templates/recipe_all.html
+++ b/src/shopping_list/templates/recipe_all.html
@@ -7,8 +7,8 @@
     <h1>RECIPES</h1>
     <form method="post" action="">
         {{ form.hidden_tag() }}
-        <input type="text" name="search_ings" />
-        <input type="submit" name="submit" value="SEARCH" />
+        <input type="text" name="search_ings">
+        <input type="submit" name="submit" value="SEARCH">
     </form>
     {% for title, id in recipes|dictsort(case_sensitive=False) %}
         <p><a href={{ url_for('recipe.view_recipe', recipe_id=id) }} style="font-family: courier">{{ title }}</a></p>
