--- a/src/shopping_list/templates/recipe_single.html
+++ b/src/shopping_list/templates/recipe_single.html
@@ -25,9 +25,9 @@
     <form method="post" action="" id="recipe_single" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <p>{{ form.title(style="font-size: 18; font-weight: bold") }}</p>
-        <input type="submit" name="submit" value="SAVE RECIPE" />
+        <input type="submit" name="submit" value="SAVE RECIPE">
         <br />
-        <input type="file" name="recipe_image" value="UPLOAD" />
+        <input type="file" name="recipe_image" value="UPLOAD">
         <br />
         <div class="container">
             <div class="outer_column">
