Get rid of favicon.ico 404 error

--- a/src/shopping_list/templates/base.html
+++ b/src/shopping_list/templates/base.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" href="data:,">
     <style>
     	h1 { font-family: courier; }
         a { text-decoration: none; }
